# pyWinCalc

./: .gitignore  .gitmodules  CMakeLists-WinCalc.txt  CMakeLists-WinCalc.txt.in  CMakeLists-pybind11.txt  CMakeLists-pybind11.txt.in  CMakeLists.txt  LICENSE  MANIFEST.in  pyproject.toml  pywincalc_class_documentation.html  pywincalc_idea.sdxml  readme.md  requirements.txt  setup.cfg  setup.py  test.txt
example/: cma_double_vision_horizontal.py  cma_double_vision_vertical.py  cma_single_vision.py  custom_perforated.py  deflection.py  example.py  example_single_clear.py  example_triple_clear.py  gases.py  igsdb_custom_perforated.py  igsdb_custom_venetian.py  igsdb_custom_woven.py  igsdb_double_clear_glass.py  igsdb_exterior_shade_on_clear_glass.py  igsdb_interior_bsdf.py  interior_bsdf.py  minimum_example.py  results_printer.py  single_clear.py  triple_clear.py
examples/: all_NFRC_results.py  bsdf_integrator.py  bsdf_shade_igsdb_product.py  bsdf_shade_local_file.py  change_thermal_openings.py  cma_single_vision.py  custom_environmental_conditions.py  custom_glazing_single_layer.py  custom_perforated.py  deflection.py  environmental_conditions_user_defined.py  gap_annulus_cylinder_pillar.py  gap_cylindrical_pillar.py  gap_linear_bearing_pillar.py  gap_measured_pillar.py  gap_pentagon_pillar.py  gap_rectangular_pillar.py  gap_spherical_pillar.py  gap_triangular_pillar.py  gap_truncated_cone_pillar.py  gaps_and_gases.py  gases.py  glass_double_layer_igsdb_product.py  glass_local_file.py  glass_triple_layer_local_file.py  glass_user_defined_nband_data.py  igsdb_custom_perforated.py  igsdb_custom_venetian.py  igsdb_custom_vertical_venetian.py  igsdb_custom_woven.py  igsdb_double_clear_glass.py  igsdb_exterior_perforated_shade_on_clear_glass.py  igsdb_exterior_venetian_shade_on_clear_glass.py  igsdb_interaction.py  igsdb_interior_bsdf.py  interior_bsdf.py  minimum_example.py  optical_results_EN_410.py  optical_results_NFRC.py  perforated_screen_igsdb_product.py  (+18 more)
pywincalc/: __init__.py  integrated.py  optical.py  product.py  standard.py
src/: _pywincalc.cpp  pywincalc.cpp  wincalcbindings.cpp
tests/: test_integrated.py
wheels/: pywincalc-0.0.1-cp27-cp27m-win32.whl  pywincalc-0.0.1-cp27-cp27m-win_amd64.whl  pywincalc-0.0.1-cp37-cp37m-win32.whl  pywincalc-0.0.1-cp37-cp37m-win_amd64.whl  pywincalc-0.0.2-cp27-cp27m-win32.whl  pywincalc-0.0.2-cp27-cp27m-win_amd64.whl  pywincalc-0.0.2-cp37-cp37m-win32.whl  pywincalc-0.0.2-cp37-cp37m-win_amd64.whl  pywincalc-0.0.5-cp27-cp27m-win32.whl  pywincalc-0.0.5-cp27-cp27m-win_amd64.whl  pywincalc-0.0.5-cp37-cp37m-win32.whl  pywincalc-0.0.5-cp37-cp37m-win_amd64.whl  pywincalc-1.0.6-cp27-cp27m-win32.whl  pywincalc-1.0.6-cp27-cp27m-win_amd64.whl  pywincalc-1.0.6-cp37-cp37m-win32.whl  pywincalc-1.0.6-cp37-cp37m-win_amd64.whl  pywincalc-1.0.7-cp27-cp27m-win32.whl  pywincalc-1.0.7-cp27-cp27m-win_amd64.whl  pywincalc-1.0.7-cp37-cp37m-win32.whl  pywincalc-1.0.7-cp37-cp37m-win_amd64.whl  pywincalc-2.0.0-cp36-cp36m-win32.whl  pywincalc-2.0.0-cp36-cp36m-win_amd64.whl  pywincalc-2.0.0-cp37-cp37m-win32.whl  pywincalc-2.0.0-cp37-cp37m-win_amd64.whl  pywincalc-2.0.0-cp38-cp38-win32.whl  pywincalc-2.0.0-cp38-cp38-win_amd64.whl  pywincalc-2.0.0-cp39-cp39-win32.whl  pywincalc-2.0.0-cp39-cp39-win_amd64.whl  (+40 more)
(+111 files in other folders)
