[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "cmake>=3.15"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ["auto", "universal2"]

manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
manylinux-pypy_x86_64-image = "manylinux2014"
manylinux-pypy_i686-image = "manylinux2014"
manylinux-pypy_aarch64-image = "manylinux2014"