[metadata]
name = pywincalc
version = 2.4.1
description = A Python library for calculating thermal and optical properties of glazing systems
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/LBNL-ETA/pywincalc
author = LBNL
author_email = sczarnecki@lbl.gov
license = BSD 3-clause
license_file = LICENSE

[bdist_wheel]
universal = 1
